# CppNext

./: .gitignore  Build.bat  CMakeLists.txt  Clean.bat  FirstSetup.bat  LICENSE  README.md  RunTests.bat  Test001.cppn  Tracy.bat  vcpkg.json
compiler/: CMakeLists.txt  README.md  main.cpp
compiler/src/: main.cpp
compiler/src/compiler/: cppnCompiler.cpp  cppnCompiler.h
compiler/src/errors/: errors.h
compiler/src/lexer/: lexedFileTable.h  lexer.cpp  lexer.h
compiler/src/parser/: functionNode.cpp  functionNode.h  generalParser.cpp  generalParser.h  importNode.cpp  importNode.h  namespaceNode.cpp  namespaceNode.h  node.h  parseNodeInterface.h  parser.cpp  parser.h  structNode.cpp  structNode.h  variableNode.cpp  variableNode.h
compiler/src/token/: token.h  tokenTable.h
compiler/tests/: lexerTests.cpp
compiler/tests/ResultFiles/lexer/: Test001.debug  Test001.tokens  Test002.debug  Test002.tokens  Test003.debug  Test003.tokens  Test004.debug  Test004.tokens  Test005.debug  Test005.tokens  Test006.debug  Test006.tokens  Test010.debug  Test010.tokens
compiler/tests/inputFiles/parser/: SimpleNamespace.cppn  SingleLineImport_ForwardSlash.cppn
compiler/tests/lexer/: Test003.cppn  Test006.cppn  Test010.cppn
compiler/tests/lexer/001/src/: Test001.cppn
compiler/tests/lexer/002/src/: Test002.cppn
compiler/tests/lexer/004/src/: Test004.cppn
compiler/tests/lexer/005/src/: Test005.cppn
compiler/tests/parser/: ClassStruct.cppn  SimpleNamespaceVariablesOnly.cppn  Test001.cppn
stl/format/: format.cppn
